--- a/package.json
+++ b/package.json
@@ -6,21 +6,20 @@
     "start": "expo start --clear",
     "android": "expo start --android --clear",
     "ios": "expo start --ios --clear",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^50.0.0",
-    "expo-linear-gradient": "^12.5.0",
-    "expo-status-bar": "^1.11.0",
+    "expo": "~50.0.0",
+    "expo-linear-gradient": "~12.5.0",
+    "expo-status-bar": "~1.11.0",
     "react": "18.2.0",
-    "react-native": "0.73.0",
-    "react-native-safe-area-context": "^4.8.0",
-    "react-native-screens": "^3.29.0",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-url-polyfill": "^2.0.0",
     "@supabase/supabase-js": "^2.39.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@expo/vector-icons": "^14.0.0"
   },
   "devDependencies": {
