--- a/.github/workflows/build-rn-apk.yml
+++ b/.github/workflows/build-rn-apk.yml
@@ -3,43 +3,58 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch: # Waxay kuu ogolaanaysaa inaad gacanta ku bilowdo build-ka
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: 1. Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: 2. Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm' # Waxay dedejisaa build-ka xiga
 
-      - name: Setup Java
+      - name: 3. Setup Java (JDK 17)
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Install Dependencies
-        run: |
-          # Waxaan isticmaalaynaa legacy-peer-deps si uusan u istaagin
-          npm install --legacy-peer-deps
-          # Waxaan ku darnay '|| true' si build-ku uusan u istaagin haddii digniin la bixiyo
-          npx expo install --check || true
+      - name: 4. Install Global Expo CLI
+        run: npm install -g expo-cli
 
-      - name: Prebuild Android
+      - name: 5. Install Dependencies (Safe Mode)
+        run: |
+          # Waxaan isticmaalaynaa legacy-peer-deps si looga gudbo is-qabqabsiga version-nada
+          npm install --legacy-peer-deps
+          # Xoog ku sax version-nada Expo ay dalbanayso (sida expo-linear-gradient)
+          npx expo install --check || true
+          npx expo install --fix || true
+
+      - name: 6. Prebuild Android Folder
+        # Tallaabadan waxay dhalisaa folder-ka 'android' iyadoo iska indha-tirta sawirada maqan
         run: npx expo prebuild --platform android --non-interactive
 
-      - name: Build APK
+      - name: 7. Build APK with Gradle
+        env:
+          # Waxaan kordhinay xusuusta (memory) si uusan build-ku u istaagin
+          _JAVA_OPTIONS: "-Xmx4g"
+          GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs=-Xmx4g"
         run: |
           cd android
           chmod +x gradlew
+          # Nadiifi dhismihii hore si looga fogaado khaladaadka 'cache'
+          ./gradlew clean
+          # Dhis APK-ga debug-ka ah
           ./gradlew assembleDebug --no-daemon
 
-      - name: Upload APK
+      - name: 8. Upload Final APK
         uses: actions/upload-artifact@v4
         with:
-          name: ShaqoHub-APK
+          name: ShaqoHub-Android-Build
           path: android/app/build/outputs/apk/debug/app-debug.apk
+          retention-days: 7 # Waxay kaydsanaan doontaa 7 casho
