--- a/.github/workflows/build-rn-apk.yml
+++ b/.github/workflows/build-rn-apk.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: # Waxay kuu ogolaanaysaa inaad gacanta ku bilowdo build-ka
+  workflow_dispatch:
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm' # Waxay dedejisaa build-ka xiga
+          # Halkan ayaan ka saarnay 'cache: npm' si uusan u weydiin lock file
 
       - name: 3. Setup Java (JDK 17)
         uses: actions/setup-java@v4
@@ -24,37 +24,28 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: 4. Install Global Expo CLI
-        run: npm install -g expo-cli
-
-      - name: 5. Install Dependencies (Safe Mode)
+      - name: 4. Install Dependencies
         run: |
-          # Waxaan isticmaalaynaa legacy-peer-deps si looga gudbo is-qabqabsiga version-nada
+          # Waxaan isticmaalaynaa legacy-peer-deps si looga gudbo is-qabqabsiga
           npm install --legacy-peer-deps
-          # Xoog ku sax version-nada Expo ay dalbanayso (sida expo-linear-gradient)
+          # Xoog ku sax version-nada Expo (Linear Gradient iyo kuwa kale)
           npx expo install --check || true
-          npx expo install --fix || true
 
-      - name: 6. Prebuild Android Folder
-        # Tallaabadan waxay dhalisaa folder-ka 'android' iyadoo iska indha-tirta sawirada maqan
+      - name: 5. Prebuild Android
         run: npx expo prebuild --platform android --non-interactive
 
-      - name: 7. Build APK with Gradle
+      - name: 6. Build APK with Gradle
         env:
-          # Waxaan kordhinay xusuusta (memory) si uusan build-ku u istaagin
           _JAVA_OPTIONS: "-Xmx4g"
           GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs=-Xmx4g"
         run: |
           cd android
           chmod +x gradlew
-          # Nadiifi dhismihii hore si looga fogaado khaladaadka 'cache'
           ./gradlew clean
-          # Dhis APK-ga debug-ka ah
           ./gradlew assembleDebug --no-daemon
 
-      - name: 8. Upload Final APK
+      - name: 7. Upload Final APK
         uses: actions/upload-artifact@v4
         with:
           name: ShaqoHub-Android-Build
           path: android/app/build/outputs/apk/debug/app-debug.apk
-          retention-days: 7 # Waxay kaydsanaan doontaa 7 casho
