--- a/package.json
+++ b/package.json
@@ -1,3 +1,13 @@
+{
+  "name": "shaqohub",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start --clear",
+    "android": "expo start --android --clear",
+    "ios": "expo start --ios --clear",
+    "web": "expo start --web"
+  },
   "dependencies": {
     "expo": "~50.0.0",
     "expo-linear-gradient": "~12.7.2",
@@ -11,4 +21,9 @@
     "@supabase/supabase-js": "^2.39.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@expo/vector-icons": "^14.0.0"
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
+}
